--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -3,9 +3,9 @@ name: CI + CD
 on:
   push:
     branches: [main]
-  pull_requests:
+  pull_request:
     branches: [main]
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   Build:
